
2020-07-12  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, codegen.c, tree.h: emit initial exception table for files.

2020-07-08  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c, typeck.c: >>TURN directives now translated to C, to be
	  transmitted to libcob.
	* cobc.c, cobc.h: move cb_exception and cobc_turn_ec to libcob.
	* cobc.c, typeck.c: replace use cob_exception in parameters with an
	  EC code, where possible.
	* cobc.c: move save/restore exception table logic to process_translate,
	  since preprocess no longer changes the exception table.
	* cobc.c (turn_ec_io): now sets files' exception tables for non-file-
	  specific >>TURN's, since they are the sole source of whether an EC is
	  enabled for a file or not.

2020-07-07  Simon Sobisch <simonsobisch@gnu.org>

	FR #53 TURN directive
	* cobc.c (turn_ec_io): fixed case-sensitivity in filename comparison

2020-07-06  Simon Sobisch <simonsobisch@gnu.org>

	FR #359 Realia / OSVS / MSCOBOL compatibility
	* parser.y, cobc.h, reserved.c, tree.c, tree.h: added partial
	  support for EXHIBIT (full parsing, without CHANGED + UPON)

2020-07-03  Edward Hart <edwar.dan.hart@gmail.com>

	* parser.y (file_status_clause): only ignore VSAM status, pending proper
	  config option.
	* typeck.c: implement syntax rules for FILE STATUS (bug #656), with
	  warning for PIC 99 status (FR #333).
	* cobc.c (compare_prepare): fixed bug #569: stop copying into cmp_line
	  when line length exceeds CB_LINE_LENGTH.

2020-06-29  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_internal_function): fix bug #641 FUNCTION RETURNING
	  with variable field size
	* parser.y (_procedure_returning): work around for bug #650
	  disabled PROCEDURE DIVISION USING for normal programs as pending
	* codegen.c (output_call): use a temporary integer for CALL ... RETURNING
	  to not pollute RETURN-CODE in this case, fixing bug #651

2020-06-28  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: include PROGRAMS_LIBS
