@@ -12531,13 +12531,16 @@ cb_emit_turn (const int ec_code, struct cb_file *f, const int enable)
 	cb_tree	ec_code_int = cb_int ((int) ec_code);
 	cb_tree	enable_int = cb_int (enable);
 
-	/* TO-DO: Create new statement */
+	/*
+	  FIXME: Duplication! Of the static function begin_statement()
+	  in parser.y, which is difficult to extract nicely
+	 */
 	current_paragraph->flag_statement = 1;
 	current_statement = cb_build_statement (">>TURN directive");
 	CB_TREE (current_statement)->source_file = cb_source_file;
 	CB_TREE (current_statement)->source_line = cb_source_line;
 	CB_ADD_TO_CHAIN (CB_TREE (current_statement), current_program->exec_list);
-	
+
 	if (f) {
 		cb_emit (CB_BUILD_FUNCALL_3 ("cob_turn_file", CB_TREE (f),
 					     ec_code_int, enable_int));
